fixed vertical alignment of home page

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,7 +1,11 @@
-div#home {
-  width: 100%;
-  height: 300px;
-  margin-top: 30%;
+main.home {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+div.home {
   text-align: center;
 }
 
